--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,19 +11,19 @@ stages:
 test-julia-1.0:
   image: julia:1.0
   script:
-    <<: *test_definiton
+    - *test_definiton
 
 test-julia-1.1:
   image: julia:1.1
   script:
-    <<: *test_definiton
+    - *test_definiton
 
 test-julia-1.3:
   image: julia:1.3
   script:
-    <<: *test_definiton
+    - *test_definiton
 
 test-julia-1.4:
   image: julia:1.4
   script:
-    <<: *test_definiton
+    - *test_definiton
