--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Tamas Gal"]
 version = "0.1.0"
 
 [deps]
+ArraysOfArrays = "65a8f2f4-9b39-5baf-92e2-a9cc46fdf018"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 Mixers = "2a8e4939-dab8-5edc-8f64-72a8776f13de"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
