--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,6 @@ authors = ["Tamas Gal"]
 version = "0.1.0"
 
 [deps]
-ArraysOfArrays = "65a8f2f4-9b39-5baf-92e2-a9cc46fdf018"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 Mixers = "2a8e4939-dab8-5edc-8f64-72a8776f13de"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
@@ -12,6 +11,10 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 julia = "1"
+CodecZlib = "0.7"
+Mixers = "0.1"
+Parameters = "0.12"
+StaticArrays = "0.12"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
