--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 julia = "1"
-CodecZlib = "0.7.0"
+CodecZlib = "0.6.0, 0.7.0"
 Mixers = "0.1.0"
 Parameters = "0.12.0"
 StaticArrays = "0.12.0"
