--- a/Project.toml
+++ b/Project.toml
@@ -12,11 +12,12 @@ Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
-CodecZlib = "0.6.0, 0.7.0"
-MD5 = "0.2.1"
-Mixers = "0.1.0"
-Parameters = "0.12.0"
-StaticArrays = "0.12.0"
+CodecZlib = "^0.6.0, ^0.7.0"
+DataFrames = "^0.21"
+MD5 = "^0.2.1"
+Mixers = "^0.1.0"
+Parameters = "^0.12.0"
+StaticArrays = "^0.12.0"
 julia = "1"
 
 [extras]
