--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,7 @@ DataFrames = "^0.21"
 MD5 = "^0.2.1"
 Mixers = "^0.1.0"
 Parameters = "^0.12.0"
-StaticArrays = "^0.12.0"
+StaticArrays = "^0.12.0, ^1"
 julia = "1"
 
 [extras]
