--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "UnROOT"
 uuid = "3cd96dde-e98d-4713-81e9-a4a1b0235ce9"
 authors = ["Tamas Gal", "Jerry Ling"]
-version = "0.1.8"
+version = "0.1.7"
 
 [deps]
 CodecLz4 = "5ba52731-8f18-5e0d-9241-30f10d1ec561"
@@ -15,6 +15,8 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 CodecZlib = "^0.6.0, ^0.7.0"
+CodecLz4 = "^0.3.0, ^0.4.0"
+CodecXz = "^0.6.0, ^0.7.0"
 DataFrames = "^0.22"
 MD5 = "^0.2.1"
 Mixers = "^0.1.0"
