--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ Mixers = "2a8e4939-dab8-5edc-8f64-72a8776f13de"
 Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+TranscodingStreams = "3bb67fe8-82b1-5028-8e26-92a6c54297fa"
 
 [compat]
 CodecLz4 = "^0.3.0, ^0.4.0"
