--- a/Project.toml
+++ b/Project.toml
@@ -7,18 +7,21 @@ version = "0.1.7"
 CodecLz4 = "5ba52731-8f18-5e0d-9241-30f10d1ec561"
 CodecXz = "ba30903b-d9e8-5048-a5ec-d1f5b0d4b47b"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
-DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+LRUCache = "8ac3fa9e-de4c-5943-b1dc-09c6b5f20637"
 MD5 = "6ac74813-4b46-53a4-afec-0b5dc9d7885c"
+Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Mixers = "2a8e4939-dab8-5edc-8f64-72a8776f13de"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+TranscodingStreams = "3bb67fe8-82b1-5028-8e26-92a6c54297fa"
 
 [compat]
-CodecZlib = "^0.6.0, ^0.7.0"
 CodecLz4 = "^0.3.0, ^0.4.0"
 CodecXz = "^0.6.0, ^0.7.0"
-DataFrames = "^0.22"
+CodecZlib = "^0.6.0, ^0.7.0"
+LRUCache = "^1.3.0"
 MD5 = "^0.2.1"
+Memoization = "^0.1.10"
 Mixers = "^0.1.0"
 Parameters = "^0.12.0"
 StaticArrays = "^0.12.0, ^1"
@@ -26,6 +29,7 @@ julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
 
 [targets]
-test = ["Test"]
+test = ["Test", "ThreadsX"]
