--- a/Project.toml
+++ b/Project.toml
@@ -1,12 +1,13 @@
 name = "UnROOT"
 uuid = "3cd96dde-e98d-4713-81e9-a4a1b0235ce9"
 authors = ["Tamas Gal", "Jerry Ling"]
-version = "0.1.9"
+version = "0.2.0"
 
 [deps]
 CodecLz4 = "5ba52731-8f18-5e0d-9241-30f10d1ec561"
 CodecXz = "ba30903b-d9e8-5048-a5ec-d1f5b0d4b47b"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
+CodecZstd = "6b39b394-51ab-5f42-8807-6242bab2b4c2"
 LRUCache = "8ac3fa9e-de4c-5943-b1dc-09c6b5f20637"
 MD5 = "6ac74813-4b46-53a4-afec-0b5dc9d7885c"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
@@ -18,6 +19,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 CodecLz4 = "^0.3.0, ^0.4.0"
 CodecXz = "^0.6.0, ^0.7.0"
 CodecZlib = "^0.6.0, ^0.7.0"
+CodecZstd = "^0.6.0, ^0.7.0"
 LRUCache = "^1.3.0"
 MD5 = "^0.2.1"
 Memoization = "^0.1.10"
