--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "UnROOT"
 uuid = "3cd96dde-e98d-4713-81e9-a4a1b0235ce9"
 authors = ["Tamas Gal", "Jerry Ling"]
-version = "0.2.1"
+version = "0.2.2"
 
 [deps]
 CodecLz4 = "5ba52731-8f18-5e0d-9241-30f10d1ec561"
@@ -9,7 +9,6 @@ CodecXz = "ba30903b-d9e8-5048-a5ec-d1f5b0d4b47b"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 CodecZstd = "6b39b394-51ab-5f42-8807-6242bab2b4c2"
 LRUCache = "8ac3fa9e-de4c-5943-b1dc-09c6b5f20637"
-MD5 = "6ac74813-4b46-53a4-afec-0b5dc9d7885c"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Mixers = "2a8e4939-dab8-5edc-8f64-72a8776f13de"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
@@ -22,16 +21,17 @@ CodecXz = "^0.6.0, ^0.7.0"
 CodecZlib = "^0.6.0, ^0.7.0"
 CodecZstd = "^0.6.0, ^0.7.0"
 LRUCache = "^1.3.0"
-MD5 = "^0.2.1"
 Memoization = "^0.1.10"
 Mixers = "^0.1.0"
 Parameters = "^0.12.0"
 StaticArrays = "^0.12.0, ^1"
+TypedTables = "^1.0.0"
 julia = "1"
 
 [extras]
+MD5 = "6ac74813-4b46-53a4-afec-0b5dc9d7885c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
 
 [targets]
-test = ["Test", "ThreadsX"]
+test = ["Test", "ThreadsX", "MD5"]
