--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,6 @@ CodecXz = "ba30903b-d9e8-5048-a5ec-d1f5b0d4b47b"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 CodecZstd = "6b39b394-51ab-5f42-8807-6242bab2b4c2"
 LRUCache = "8ac3fa9e-de4c-5943-b1dc-09c6b5f20637"
-Lazy = "50d2b5c4-7a5e-59d5-8109-a42b560f39c0"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Mixers = "2a8e4939-dab8-5edc-8f64-72a8776f13de"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
@@ -27,6 +26,7 @@ Memoization = "^0.1.10"
 Mixers = "^0.1.0"
 Parameters = "^0.12.0"
 StaticArrays = "^0.12.0, ^1"
+Tables = "^1.0.0"
 TypedTables = "^1.0.0"
 julia = "1"
 
