--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ CodecLz4 = "^0.3.0, ^0.4.0"
 CodecXz = "^0.6.0, ^0.7.0"
 CodecZlib = "^0.6.0, ^0.7.0"
 CodecZstd = "^0.6.0, ^0.7.0"
+DataFrames = "^1.0.0"
 LRUCache = "^1.3.0"
 Memoization = "^0.1.10"
 Mixers = "^0.1.0"
