--- a/Project.toml
+++ b/Project.toml
@@ -10,7 +10,6 @@ CodecXz = "ba30903b-d9e8-5048-a5ec-d1f5b0d4b47b"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 CodecZstd = "6b39b394-51ab-5f42-8807-6242bab2b4c2"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 LRUCache = "8ac3fa9e-de4c-5943-b1dc-09c6b5f20637"
 LorentzVectors = "3f54b04b-17fc-5cd4-9758-90c048d965e3"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
@@ -43,6 +42,7 @@ julia = "^1.3"
 MD5 = "6ac74813-4b46-53a4-afec-0b5dc9d7885c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
+InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 
 [targets]
-test = ["Test", "ThreadsX", "MD5"]
+test = ["Test", "ThreadsX", "MD5", "InteractiveUtils"]
