--- a/Project.toml
+++ b/Project.toml
@@ -42,6 +42,7 @@ julia = "^1.3"
 MD5 = "6ac74813-4b46-53a4-afec-0b5dc9d7885c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
+InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 
 [targets]
-test = ["Test", "ThreadsX", "MD5"]
+test = ["Test", "ThreadsX", "MD5", "InteractiveUtils"]
