--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "UnROOT"
 uuid = "3cd96dde-e98d-4713-81e9-a4a1b0235ce9"
 authors = ["Tamas Gal", "Jerry Ling", "Johannes Schumann", "Nick Amin"]
-version = "0.4.2"
+version = "0.5.0"
 
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
@@ -16,8 +16,8 @@ LorentzVectors = "3f54b04b-17fc-5cd4-9758-90c048d965e3"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Mixers = "2a8e4939-dab8-5edc-8f64-72a8776f13de"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
-Polyester = "f517fe37-dbe3-4b94-8317-1923a5111588"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
@@ -43,9 +43,10 @@ julia = "^1.3"
 
 [extras]
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
+Polyester = "f517fe37-dbe3-4b94-8317-1923a5111588"
 MD5 = "6ac74813-4b46-53a4-afec-0b5dc9d7885c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
 
 [targets]
-test = ["Test", "ThreadsX", "MD5", "InteractiveUtils"]
+test = ["Test", "ThreadsX", "MD5", "InteractiveUtils", "Polyester"]
