--- a/Project.toml
+++ b/Project.toml
@@ -46,7 +46,8 @@ InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 Polyester = "f517fe37-dbe3-4b94-8317-1923a5111588"
 MD5 = "6ac74813-4b46-53a4-afec-0b5dc9d7885c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
 
 [targets]
-test = ["Test", "ThreadsX", "MD5", "InteractiveUtils"]
+test = ["Test", "Pkg", "ThreadsX", "MD5", "InteractiveUtils"]
