--- a/Project.toml
+++ b/Project.toml
@@ -35,6 +35,7 @@ LorentzVectors = "^0.4.0"
 Memoization = "^0.1.10"
 Mixers = "^0.1.0"
 Parameters = "^0.12.0"
+Polyester = "^0.4.2"
 PrettyTables = "^1.0.0"
 StaticArrays = "^0.12.0, ^1"
 Tables = "^1.0.0"
