--- a/Project.toml
+++ b/Project.toml
@@ -37,6 +37,7 @@ Mixers = "^0.1.0"
 Parameters = "^0.12.0"
 Polyester = "^0.4.2"
 PrettyTables = "^1.0.0"
+Requires = "^1"
 StaticArrays = "^0.12.0, ^1"
 Tables = "^1.0.0"
 TypedTables = "^1.0.0"
