--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ CodecLz4 = "5ba52731-8f18-5e0d-9241-30f10d1ec561"
 CodecXz = "ba30903b-d9e8-5048-a5ec-d1f5b0d4b47b"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 CodecZstd = "6b39b394-51ab-5f42-8807-6242bab2b4c2"
+IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LRUCache = "8ac3fa9e-de4c-5943-b1dc-09c6b5f20637"
 LorentzVectors = "3f54b04b-17fc-5cd4-9758-90c048d965e3"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
