--- a/Project.toml
+++ b/Project.toml
@@ -29,6 +29,7 @@ CodecLz4 = "^0.3.0, ^0.4.0"
 CodecXz = "^0.6.0, ^0.7.0"
 CodecZlib = "^0.6.0, ^0.7.0"
 CodecZstd = "^0.6.0, ^0.7.0"
+IterTools = "^1"
 LRUCache = "^1.3.0"
 LorentzVectors = "^0.4.0"
 Memoization = "^0.1.10"
