--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "UnROOT"
 uuid = "3cd96dde-e98d-4713-81e9-a4a1b0235ce9"
 authors = ["Tamas Gal", "Jerry Ling", "Johannes Schumann", "Nick Amin"]
-version = "0.7.1"
+version = "0.7.2"
 
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
@@ -12,12 +12,14 @@ CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 CodecZstd = "6b39b394-51ab-5f42-8807-6242bab2b4c2"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LRUCache = "8ac3fa9e-de4c-5943-b1dc-09c6b5f20637"
+LazyArrays = "5078a376-72f3-5289-bfd5-ec5146d43c02"
 LorentzVectors = "3f54b04b-17fc-5cd4-9758-90c048d965e3"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Mixers = "2a8e4939-dab8-5edc-8f64-72a8776f13de"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
+SentinelArrays = "91c51154-3ec4-41a3-a24f-3f23e20d615c"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
@@ -31,6 +33,7 @@ CodecZlib = "^0.6.0, ^0.7.0"
 CodecZstd = "^0.6.0, ^0.7.0"
 IterTools = "^1"
 LRUCache = "^1.3.0"
+LazyArrays = "^0.22, ^1"
 LorentzVectors = "^0.4.0"
 Memoization = "^0.1.10"
 Mixers = "^0.1.0"
