--- a/Project.toml
+++ b/Project.toml
@@ -32,7 +32,7 @@ CodecZlib = "^0.6.0, ^0.7.0"
 CodecZstd = "^0.6.0, ^0.7.0"
 IterTools = "^1"
 LRUCache = "^1.3.0"
-LazyArrays = "^0.22, ^1"
+LazyArrays = "^0.15, ^0.21, ^0.22, ^1"
 LorentzVectors = "^0.4.0"
 Memoization = "^0.1.10"
 Mixers = "^0.1.0"
