--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ CodecZstd = "6b39b394-51ab-5f42-8807-6242bab2b4c2"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LRUCache = "8ac3fa9e-de4c-5943-b1dc-09c6b5f20637"
 LazyArrays = "5078a376-72f3-5289-bfd5-ec5146d43c02"
+LibDeflate = "9255714d-24a7-4b30-8ea3-d46a97f7e13b"
 LorentzVectors = "3f54b04b-17fc-5cd4-9758-90c048d965e3"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Mixers = "2a8e4939-dab8-5edc-8f64-72a8776f13de"
