--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,6 @@ AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 ArraysOfArrays = "65a8f2f4-9b39-5baf-92e2-a9cc46fdf018"
 CodecLz4 = "5ba52731-8f18-5e0d-9241-30f10d1ec561"
 CodecXz = "ba30903b-d9e8-5048-a5ec-d1f5b0d4b47b"
-CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 CodecZstd = "6b39b394-51ab-5f42-8807-6242bab2b4c2"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LRUCache = "8ac3fa9e-de4c-5943-b1dc-09c6b5f20637"
@@ -28,11 +27,11 @@ AbstractTrees = "^0.3.0"
 ArraysOfArrays = "^0.5.3"
 CodecLz4 = "^0.3.0, ^0.4.0"
 CodecXz = "^0.6.0, ^0.7.0"
-CodecZlib = "^0.6.0, ^0.7.0"
 CodecZstd = "^0.6.0, ^0.7.0"
 IterTools = "^1"
 LRUCache = "^1.3.0"
 LazyArrays = "^0.15, ^0.21, ^0.22, ^1"
+LibDeflate = "^0.4.0"
 LorentzVectors = "^0.4.0"
 Memoization = "^0.1.10"
 Mixers = "^0.1.0"
