--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,12 @@ stages:
 .test_template: &test_definiton |
   export JULIA_PROJECT=@.
   export JL_PKG=ROOTIO
-  julia -t 2 --check-bounds=yes --color=yes -e "if VERSION < v\"0.7.0-DEV.5183\"; Pkg.test(\"${JL_PKG}\", coverage=true); else using Pkg; Pkg.test(coverage=true); end"
+  julia --threads=2 --check-bounds=yes --color=yes -e "if VERSION < v\"0.7.0-DEV.5183\"; Pkg.test(\"${JL_PKG}\", coverage=true); else using Pkg; Pkg.test(coverage=true); end"
 
+test-julia-1.3:
+  image: julia:1.3
+  script:
+    - *test_definiton
 
 test-julia-1.6:
   image: julia:1.6
