--- a/Project.toml
+++ b/Project.toml
@@ -21,7 +21,7 @@ PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
-XRootDgo = "5dfacf3c-dbcf-4dec-af5d-7b7f821edeba"
+xrootdgo_jll = "9d84c17e-11f2-50ef-8cc9-e9701362097f"
 
 [compat]
 AbstractTrees = "^0.3.0"
@@ -42,6 +42,7 @@ PrettyTables = "^1.2.0"
 StaticArrays = "^0.12.0, ^1"
 Tables = "^1.0.0"
 TypedTables = "^1.0.0"
+xrootdgo_jll = "^0.30.0"
 julia = "^1.3"
 
 [extras]
