add HTTP source support

--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ ArraysOfArrays = "65a8f2f4-9b39-5baf-92e2-a9cc46fdf018"
 CodecLz4 = "5ba52731-8f18-5e0d-9241-30f10d1ec561"
 CodecXz = "ba30903b-d9e8-5048-a5ec-d1f5b0d4b47b"
 CodecZstd = "6b39b394-51ab-5f42-8807-6242bab2b4c2"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LRUCache = "8ac3fa9e-de4c-5943-b1dc-09c6b5f20637"
 LazyArrays = "5078a376-72f3-5289-bfd5-ec5146d43c02"
@@ -42,8 +43,8 @@ PrettyTables = "^1.2.0"
 StaticArrays = "^0.12.0, ^1"
 Tables = "^1.0.0"
 TypedTables = "^1.0.0"
-xrootdgo_jll = "^0.30.0"
 julia = "^1.6"
+xrootdgo_jll = "^0.30.0"
 
 [extras]
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
