CompatHelper: bump compat for PrettyTables to 2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -41,7 +41,7 @@ Memoization = "^0.1.10"
 Mixers = "^0.1.0"
 Parameters = "^0.12.0"
 Polyester = "^0.5.3"
-PrettyTables = "^1.2.0"
+PrettyTables = "^1.2.0, 2"
 StaticArrays = "^0.12.0, ^1"
 Tables = "^1.0.0"
 TypedTables = "^1.0.0"
