--- a/Project.toml
+++ b/Project.toml
@@ -40,7 +40,7 @@ Memoization = "^0.1.10"
 Mixers = "^0.1.0"
 Parameters = "^0.12.0"
 Polyester = "^0.5.3"
-PrettyTables = "^1.2.0"
+PrettyTables = "2"
 StaticArrays = "^0.12.0, ^1"
 Tables = "^1.0.0"
 julia = "^1.6"
