--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "UnROOT"
 uuid = "3cd96dde-e98d-4713-81e9-a4a1b0235ce9"
 authors = ["Tamas Gal", "Jerry Ling", "Johannes Schumann", "Nick Amin"]
-version = "0.8.11"
+version = "0.8.12"
 
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
@@ -22,7 +22,6 @@ Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
-TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 xrootdgo_jll = "9d84c17e-11f2-50ef-8cc9-e9701362097f"
 
 [compat]
@@ -41,10 +40,9 @@ Memoization = "^0.1.10"
 Mixers = "^0.1.0"
 Parameters = "^0.12.0"
 Polyester = "^0.5.3"
-PrettyTables = "^1.2.0"
+PrettyTables = "2"
 StaticArrays = "^0.12.0, ^1"
 Tables = "^1.0.0"
-TypedTables = "^1.0.0"
 julia = "^1.6"
 xrootdgo_jll = "^0.31.1"
 
@@ -57,4 +55,4 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
 
 [targets]
-test = ["Test", "Pkg", "ThreadsX", "MD5", "InteractiveUtils"]
+test = ["Test", "Pkg", "ThreadsX", "MD5", "InteractiveUtils", "Polyester"]
