--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,6 @@ notebooks/* linguist-detectable=false
 
 # Scripts to generate data for tests
 test/samples/* linguist-detectable=false
+
+# JOSS paper
+paper/** linguist-detectable=false
