--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,6 @@ CodecZstd = "6b39b394-51ab-5f42-8807-6242bab2b4c2"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LRUCache = "8ac3fa9e-de4c-5943-b1dc-09c6b5f20637"
-LazyArrays = "5078a376-72f3-5289-bfd5-ec5146d43c02"
 LibDeflate = "9255714d-24a7-4b30-8ea3-d46a97f7e13b"
 LorentzVectors = "3f54b04b-17fc-5cd4-9758-90c048d965e3"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
@@ -20,6 +19,7 @@ Mixers = "2a8e4939-dab8-5edc-8f64-72a8776f13de"
 Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
+SplitApplyCombine = "03a91e81-4c3e-53e1-a0a4-9c0c8f19dd66"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 xrootdgo_jll = "9d84c17e-11f2-50ef-8cc9-e9701362097f"
@@ -33,7 +33,6 @@ CodecZstd = "^0.6.0, ^0.7.0"
 HTTP = "^0.9.7, 1"
 IterTools = "^1"
 LRUCache = "^1.3.0"
-LazyArrays = "^0.21, ^0.22, ^1"
 LibDeflate = "^0.4.1"
 LorentzVectors = "^0.4.0"
 Memoization = "^0.1.10"
