--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ Mixers = "2a8e4939-dab8-5edc-8f64-72a8776f13de"
 Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
-SplitApplyCombine = "03a91e81-4c3e-53e1-a0a4-9c0c8f19dd66"
+SentinelArrays = "91c51154-3ec4-41a3-a24f-3f23e20d615c"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 xrootdgo_jll = "9d84c17e-11f2-50ef-8cc9-e9701362097f"
@@ -38,7 +38,6 @@ LorentzVectors = "^0.4.0"
 Memoization = "^0.1.10"
 Mixers = "^0.1.0"
 Parameters = "^0.12.0"
-Polyester = "^0.5.3"
 PrettyTables = "2"
 StaticArrays = "^0.12.0, ^1"
 Tables = "^1.0.0"
@@ -49,9 +48,8 @@ xrootdgo_jll = "^0.31.1"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 MD5 = "6ac74813-4b46-53a4-afec-0b5dc9d7885c"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
-Polyester = "f517fe37-dbe3-4b94-8317-1923a5111588"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
 
 [targets]
-test = ["Test", "Pkg", "ThreadsX", "MD5", "InteractiveUtils", "Polyester"]
+test = ["Test", "Pkg", "ThreadsX", "MD5", "InteractiveUtils"]
