--- a/Project.toml
+++ b/Project.toml
@@ -46,6 +46,7 @@ SentinelArrays = "^1.3"
 StaticArrays = "^0.12.0, ^1"
 StructArrays = "0.6"
 Tables = "^1.0.0"
+xrootdgo_jll = "^0.32.1"
 julia = "^1.6"
 
 [extras]
