--- a/Project.toml
+++ b/Project.toml
@@ -41,10 +41,10 @@ IterTools = "^1"
 LRUCache = "^1.3.0"
 LibDeflate = "^0.4.1"
 LorentzVectors = "^0.4.0"
-Memoization = "^0.1.10, 0.2"
-Mixers = "^0.1.0"
-Parameters = "^0.12.0"
-PrettyTables = "2"
+Memoization = "^0.2"
+Mixers = "^0.1"
+Parameters = "^0.12"
+PrettyTables = "2.0"
 SentinelArrays = "^1.3"
 StaticArrays = "^1"
 StructArrays = "0.6"
