--- a/Project.toml
+++ b/Project.toml
@@ -50,7 +50,7 @@ Memoization = "^0.2"
 Mixers = "^0.1"
 Mmap = "^1.0"
 Parameters = "^0.12"
-PrettyTables = "2.0"
+PrettyTables = "^2.1"
 SentinelArrays = "^1.3"
 SHA = "^1.0"
 StaticArrays = "^1"
