--- a/Project.toml
+++ b/Project.toml
@@ -29,34 +29,34 @@ XXhash = "137af188-b1ec-11e9-0b40-31ed9142ae64"
 xrootdgo_jll = "9d84c17e-11f2-50ef-8cc9-e9701362097f"
 
 [compat]
-Aqua = "^0.8"
-Arrow = "^2.6"
 AbstractTrees = "^0.4"
+Aqua = "^0.8"
 ArraysOfArrays = "^0.6"
+Arrow = "~2.7.1"
 BitIntegers = "^0.3"
 CodecLz4 = "^0.4"
 CodecXz = "^0.7"
 CodecZstd = "^0.8"
 DataFrames = "^1.5"
-InteractiveUtils = "^1.0"
 FHist = "^0.10"
 HTTP = "^1"
+InteractiveUtils = "^1.0"
 IterTools = "^1"
 LRUCache = "^1.3.0"
 LibDeflate = "^0.4.1"
 LorentzVectors = "^0.4.0"
-Pkg = "^1.0"
 Memoization = "^0.2"
 Mixers = "^0.1"
 Mmap = "^1.0"
 Parameters = "^0.12"
+Pkg = "^1.0"
 PrettyTables = "^2.1"
-SentinelArrays = "^1.3"
 SHA = "^1.0"
+SentinelArrays = "^1.3"
 StaticArrays = "^1"
 StructArrays = "0.6"
-Tables = "^1.9"
 TOML = "^1.0"
+Tables = "^1.9"
 Test = "^1.0"
 XXhash = "0.8"
 julia = "^1.6"
@@ -75,5 +75,4 @@ TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = [ "Aqua", "Arrow", "DataFrames", "InteractiveUtils", "LorentzVectors", "Pkg", "SHA",
-"StaticArrays", "TOML", "Test"]
+test = ["Aqua", "Arrow", "DataFrames", "InteractiveUtils", "LorentzVectors", "Pkg", "SHA", "StaticArrays", "TOML", "Test"]
