--- a/Project.toml
+++ b/Project.toml
@@ -51,6 +51,7 @@ Mixers = "^0.1"
 Mmap = "^1.0"
 Parameters = "^0.12"
 Pkg = "^1.0"
+PrecompileTools = "^1.2.0"
 PrettyTables = "^2.1"
 SHA = "^1.0"
 SentinelArrays = "^1.3"
