Tested with registered XRootD

--- a/Project.toml
+++ b/Project.toml
@@ -6,7 +6,6 @@ version = "0.10.30"
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 ArraysOfArrays = "65a8f2f4-9b39-5baf-92e2-a9cc46fdf018"
-Arrow = "69666777-d1a9-59fb-9406-91d4454c9d45"
 BitIntegers = "c3b6d118-76ef-56ca-8cc7-ebb389d030a1"
 CodecLz4 = "5ba52731-8f18-5e0d-9241-30f10d1ec561"
 CodecXz = "ba30903b-d9e8-5048-a5ec-d1f5b0d4b47b"
@@ -62,6 +61,7 @@ StructArrays = "0.6"
 TOML = "^1.0"
 Tables = "^1.9"
 Test = "^1.0"
+XRootD = "^0.1"
 XXHashNative = "^1.0.1"
 julia = "^1.7"
 
