CompatHelper: bump compat for PrettyTables to 3, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -55,7 +55,7 @@ Mmap = "^1.0"
 Parameters = "^0.12"
 Pkg = "^1.0"
 PrecompileTools = "^1.2.0"
-PrettyTables = "^2.1"
+PrettyTables = "^2.1, 3"
 Random = "^1.0"
 SHA = "^0.7, ^1.0"
 SentinelArrays = "^1.3"
